--- a/RevitElementsHierarchy/RevitElementsHierarchy.csproj
+++ b/RevitElementsHierarchy/RevitElementsHierarchy.csproj
@@ -108,7 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="ModelViews\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
